# x-ui-rs

./: CHANGELOG.md  LICENSE  README.md  install.sh  test_parser  test_parser.rs
.github/: FUNDING.yml
.github/workflows/: release.yml
backend/: Cargo.toml
backend/migrations/: 001_init.sql  004_fix_missing_columns.sql  20260102144300_add_tag_to_inbounds.sql
backend/src/: main.rs
backend/src/config/: mod.rs
backend/src/db/: mod.rs
backend/src/errors/: mod.rs
backend/src/handlers/: inbound.rs  mod.rs  system.rs  xray.rs
backend/src/models/: inbound.rs  protocol_settings.rs  stream_settings.rs
backend/src/routes/: mod.rs
backend/src/services/: auth_service.rs  system_service.rs  traffic_service.rs  xray_service.rs
backend/src/utils/: firewall.rs  mod.rs  validation.rs  xray_config_builder.rs
web/: index.html  package.json  vite.config.ts
web/src/: router.tsx
web/src/api/: apiClient.ts  system.ts  xray.ts
web/src/components/: AddInboundModal.tsx  BackupModal.tsx  InboundTable.tsx  InboundTableVirtual.tsx  QRCodeModal.tsx  StatsHeader.tsx  VersionSelectModal.tsx
web/src/components/AddInboundModal/: index.tsx  useInboundForm.ts
web/src/config/: constants.ts
web/src/i18n/locales/: en.json  zh.json
web/src/store/: useAuthStore.ts  useInboundStore.ts  useSettingStore.ts
web/src/utils/: linkUtils.ts  uuid.ts
web/src/views/: Dashboard.tsx  InboundPage.tsx  LoginPage.tsx  SettingsPage.tsx
