[package]
name = "x-ui-backend"
version = "1.1.88"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1.42", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "fs"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }

jsonwebtoken = "9.3"
argon2 = "0.5"

dotenvy = "0.15"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

anyhow = "1.0"
thiserror = "2.0"

sysinfo = { version = "0.33", default-features = false, features = ["system", "disk", "network"] }

chrono = { version = "0.4", features = ["serde"] }

uuid = { version = "1.11", features = ["v4", "serde"] }

async-process = "2.3"

rand_core = { version = "0.6", features = ["getrandom"] }

regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
zip = { version = "2.1", default-features = false, features = ["deflate"] }
futures-util = "0.3.31"

mimalloc = "0.1"
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
[dev-dependencies]
axum-test = "16.3"
